e2e/tests/all/snapshots/modal_rest_desktop.snap
---
source: e2e/src/suite.rs
description: modal at desktop (rest)
expression: tree
---
button "Close editor"
  StaticText "Close editor"
