e2e/tests/all/snapshots/modal_rest_mobile.snap
---
source: e2e/src/suite.rs
description: modal at mobile (rest)
expression: tree
---
button "Close editor"
  StaticText "Close editor"
