e2e/tests/all/snapshots/multi_select_rest_desktop.snap
---
source: e2e/src/suite.rs
description: multi_select at desktop (rest)
expression: tree
---
LabelText
  StaticText "Fruit"
StaticText "Cherry"
button "Remove Cherry"
combobox "Fruit" = Cherry [expanded=false] [haspopup=listbox]
  StaticText "Cherry"
status [atomic] [live=polite]
status [atomic] [live=polite]
