e2e/tests/all/snapshots/multi_select_rest_mobile.snap
---
source: e2e/src/suite.rs
description: multi_select at mobile (rest)
expression: tree
---
LabelText
  StaticText "Fruit"
generic
  generic
    StaticText "Cherry"
    button "Remove Cherry"
  combobox "Fruit" = Cherry [expanded=false] [haspopup=listbox]
    StaticText "Cherry"
status [atomic] [live=polite]
status [atomic] [live=polite]
