e2e/tests/all/snapshots/native_select_rest_mobile.snap
---
source: e2e/src/suite.rs
description: native_select at mobile (rest)
expression: tree
---
LabelText
  StaticText "Fruit"
StaticText "For the smoothie."
combobox "Fruit" = Pick one [expanded=false] [haspopup=menu] [invalid]
  MenuListPopup
    option "Pick one" [disabled]
    option "Apple" [selected=false]
    option "Banana" [selected=false]
    option "Cherry" [selected=false]
    option "Damson" [selected=false]
    option "Elderberry" [selected=false]
StaticText "One per order."
StaticText "Fruit needed"
button "Clear"
  StaticText "Clear"
LabelText
  StaticText "Locked fruit"
combobox "Locked fruit" = Banana [expanded=false] [haspopup=menu]
  MenuListPopup
    option "Apple" [selected=false]
    option "Banana" [selected]
    option "Cherry" [selected=false]
    option "Damson" [selected=false]
    option "Elderberry" [selected=false]
LabelText
  StaticText "Grouped fruit"
combobox "Grouped fruit" = Apple [expanded=false] [haspopup=menu]
  MenuListPopup
    group "Pome"
      option "Apple" [selected]
    group "Stone"
      option "Cherry" [disabled]
      option "Damson" [selected=false]
LabelText
  StaticText "Off"
combobox "Off" = Apple [disabled] [expanded=false] [haspopup=menu]
  MenuListPopup
    option "Apple" [disabled]
    option "Banana" [disabled]
    option "Cherry" [disabled]
    option "Damson" [disabled]
    option "Elderberry" [disabled]
LabelText
  StaticText "Notes"
StaticText "Anything the team should know."
textbox "Notes" [required]
StaticText "Markdown is not rendered."
LabelText
  StaticText "Terms"
textbox "Terms" = Read me. [readonly]
  StaticText "Read me."
LabelText
  StaticText "Closed"
textbox "Closed" = Too late. [disabled]
  StaticText "Too late."
