e2e/tests/all/snapshots/nav_link-sidebar_rest_desktop.snap
---
source: e2e/src/suite.rs
description: nav_link-sidebar at desktop (rest)
expression: tree
---
link "Here" [current=page]
  StaticText "Here"
