e2e/tests/all/snapshots/notifications_assertive_mobile.snap
---
source: e2e/src/suite.rs
description: notifications at mobile (assertive)
expression: tree
---
button "Notify"
  StaticText "Notify"
button "Notify assertively"
  StaticText "Notify assertively"
button "Notify for a while"
  StaticText "Notify for a while"
region "Notifications (F8)"
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
      list
        listitem [level=1]
          group "Upload failed"
            generic
              StaticText "Upload failed"
            generic
              StaticText "The file is larger than 10 MB"
            button "Close"
    generic [live=polite]
      list
        listitem [level=1]
          group
            generic
              StaticText "Saved to your library"
            button "Close"
